# spock

./: .env  .env.example  .env.production  .gitignore  Dockerfile  README.md  alembic.ini  entrypoint.sh  mypy.ini  pyproject.toml  render.yaml  ruff.toml  run_all_tickers.sh
.github/workflows/: ci-cd.yml
alembic/: env.py
alembic/versions/: 000_initial_schema.py  001_add_fund_type.py  002_add_retry_count.py
src/: dependencies.py  main.py
src/api/routes/: analysis.py  funds.py  health.py  jobs.py
src/core/domain/: entity.py
src/domain/application/repositories/: funds_repository.py  reports_repository.py  (+5 more)
src/equity/: analyzer.py  content_validator.py  dependencies.py  module.py  routes.py
src/equity/usecases/: discover_equity_reports.py  submit_equity_analysis.py
src/infra/env/: env.py  env_service.py
src/infra/persistence/: models.py  session.py  validate_schema.py
src/mortgage/: analyzer.py  content_validator.py  dependencies.py  module.py  routes.py
src/mortgage/usecases/: discover_mortgage_reports.py  submit_mortgage_analysis.py
src/shared/events/: analyzer_registry.py  event_bus.py  events.py
src/shared/workers/: celery_app.py
src/spock.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/workers/: celery_app.py
src/workers/tasks/: report_analysis.py
tests/: test_heuristic_analyzer.py  test_mortgage_analyzer.py  test_pdf_extractor.py  test_score_calculator.py
tests/e2e/: conftest.py  test_auth.py  test_cache_behavior.py  test_equity_reports.py  test_equity_transparency.py  test_health.py  test_mortgage_endpoints.py
(+89 files in other folders)
